# MyCpp

./: .gitignore  README.md
NDindexing/: CMakeLists.txt  README.md
features/: README.md
features/11/thread/: CMakeLists.txt  README.md  main.cpp
features/11/type_deduction/: CMakeLists.txt  README.md  main.cpp
features/20/concept_basics/: CMakeLists.txt  README.md  functionSignatureMatching.cpp
features/20/constexpr_func_concept/: CMakeLists.txt  README.md  main.cpp
features/20/cxx_modules/: CMakeLists.txt  README.md  main.cpp
features/20/designated_initializer/: CMakeLists.txt  README.md  main.cpp
features/23/mdspan/hello_mspan/: CMakeLists.txt  README.md  main.cpp
features/23/mdspan/layouts/: 2Ddata.cpp  2DdataPadding.cpp  CMakeLists.txt  README.md
features/23/mdspan/layouts/include/: utils.hpp
features/23/mdspan/linear_index/: CMakeLists.txt  README.md  bench.cpp  main.cpp
features/23/mdspan/linear_index/bench/: baselineDynamic.cpp  baselineDynamic.hpp  baselineStatic.hpp
features/23/mdspan/linear_index/include/: MdSpanLinearAdapter.hpp  SimpleSpan.hpp
features/23/mdspan/rank_types/: CMakeLists.txt  README.md  main.cpp
gpu/compute_cuda_hip/: CMakeLists.txt  README.md  compute_cuda.cpp  compute_hip.cpp  main.cpp
gpu/compute_cuda_hip/include/: compute_cuda.hpp  compute_hip.hpp
gpu/nvFatbin/: CMakeLists.txt  README.md  original.cpp
gpu/sycl_on_amd_nvidia/: CMakeLists.txt  README.md  main.cpp
prototypes/NDindexing/: README.md  runtime.cpp
prototypes/streamVector/: CMakeLists.txt  README.md  main.cpp
utils/dump_operator/: CMakeLists.txt  README.md  helper.hpp  main.cpp
utils/dump_used_std_library/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
utils/dump_used_std_library/include/: utils.hpp
